hook, create table and insert table audit_eric

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,10 +35,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 #on-run-start:
 #  - "create table if not exists audit (model text, state text, time timestamp_ltz)"
 #
-#on-run-end:
-#  - 'grant usage on schema analytics.dbt to role analyst'
-#  - 'grant select on all tables in schema analytics.dbt to role analyst'
-#  - 'grant select on all views in schema analytics.dbt to role analyst'
+on-run-start:
+  - "create table if not exists audit_eric (model text, state text, time timestamp_ltz)"
+
+on-run-end:
+  - 'grant usage on schema analytics.dbt to role analyst'
+  - 'grant select on all tables in schema analytics.dbt to role analyst'
+  - 'grant select on all views in schema analytics.dbt to role analyst'
 
 
 models:
@@ -46,8 +49,13 @@ models:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: table
+      pre-hook: "insert into DBT.AUDIT_ERIC (model, state, time) values ('{{this.name}}', 'starting model deployment', current_timestamp )"
+
 vars:
   my_first_variable: True
   my_second_variable: 2020
   my_third_variable: 1
-      # re-hook: "insert into dbt.audit (model, state, time) values ('{{this.name}}', 'starting model deployment', current_timestamp )"
+  
+
+#  post-hook: 'grant usage on schema {{target.this}} to role analyst'
+#  post-hook: 'grant select on all tables in schema analytics.dbt to role analyst'
